--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
       <nav class="nav" aria-label="Navigation principale">
         <a href="#vision">Vision</a>
-        <a href="#fruit">Fruit</a>
+        <a href="#fruit">Impacts</a>
         <a href="#ressources">Ressources</a>
         <a href="#adullam">Adullam</a>
-        <a href="#maniere">Notre manière</a>
+        <a href="#maniere">Notre service</a>
         <a class="btn btn-sm btn-primary" href="#rejoindre">Rejoindre</a>
       </nav>
 
@@ -50,10 +50,10 @@
 
     <div class="mobile-nav" aria-label="Menu mobile">
       <a href="#vision">Vision</a>
-      <a href="#fruit">Fruit</a>
+      <a href="#fruit">Impacts</a>
       <a href="#ressources">Ressources</a>
       <a href="#adullam">Adullam</a>
-      <a href="#maniere">Notre manière</a>
+      <a href="#maniere">Notre Service</a>
       <a class="btn btn-sm btn-primary" href="#rejoindre">Rejoindre</a>
     </div>
   </header>
@@ -73,7 +73,7 @@
           <h1 id="hero-title">Une maison où les fils et les filles vivent de l’héritage céleste.</h1>
 
           <p class="lead">
-            Une écclesia vivante, connectée en Esprit avant d’être connectée digitalement.
+            Une communauté vivante, connectée en Esprit avant d’être connectée digitalement.
             Le support n’est qu’un moyen — la réalité est en Christ.
           </p>
 
@@ -84,8 +84,8 @@
 
           <div class="trustbar" aria-label="Preuves sociales">
             <div class="trust-item">
-              <span class="trust-num">Des milliers</span>
-              <span class="trust-label">de vies touchées</span>
+              <span class="trust-num">Des vies</span>
+              <span class="trust-label">touchées et tranformé</span>
             </div>
             <div class="trust-item">
               <span class="trust-num">1 000+</span>
@@ -98,7 +98,7 @@
           </div>
 
           <p class="fineprint">
-            Aucun marketing agressif. Aucun engagement forcé. Juste une porte ouverte.
+            Aucun engagement forcé. Juste une porte ouverte.
           </p>
         </div>
 
@@ -135,7 +135,6 @@
               <div class="form-status" role="status" aria-live="polite"></div>
 
               <p class="fineprint">
-                Tu pourras connecter ce formulaire à Brevo / Mailchimp / ConvertKit.
               </p>
             </form>
           </div>
